Back out last change, Integer.valueOf() is not in Java 1.4